...
                  ),
                ),
              ),
              Container(
                padding: EdgeInsets.all(20.0),
                child: TextField(
                    key: Key('entercity'),
                    style: TextStyle(

                      color: Colors.black,
                    ),
                    decoration: kInputFieldDecoration,
                    onChanged: (value) {
                      cityName = value;
                    }),
              ),
              FlatButton(
                key:Key('gettingTheWeather'),
                onPressed: () {
                  Navigator.pop(context, cityName);
                },
                child: Text(
                  'Get Weather',
                  style: kButtonTextStyle,
...
